# Day26-Track3-MCP-tool-integration

./: .mcp.json  SUBMISSION.md  main.py
implementation/: .gitignore  AGENTS.md  DEMO.md  README.md  demo_http_auth.py  init_db.py  mcp_server.py  pyproject.toml  start_inspector.ps1  start_inspector.sh  verify_server.py
implementation/db/: __init__.py  base.py  errors.py  postgres_adapter.py  sqlite_adapter.py
implementation/tests/: test_server.py
