[project]
name = "sqlite-lab-mcp"
version = "0.1.0"
description = "Database MCP server built with FastMCP over SQLite (with a swappable PostgreSQL backend)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
